# forest-compiler

./: .gitignore  .tool-versions  .travis.yml  IndentationSensitiveParsing.hs  LICENSE  Makefile  README.md  foo  foo.hs  forest-compiler.cabal  index.html  interp.js  output.txt  output.wasm  output.wast  output.wat  shell.nix  stack.yaml  test.js  todo.txt  wasm-interp  wasm-server
app/: Main.hs
js/: string.js
nix/: dependencies.nix  test-shell.nix  wabt-shell.nix  wabt.nix
samples/: addOne.tree  adt.tree  annotation.tree  arithmetic.tree  bool.tree  closure.tree  deconstruction.tree  error.tree  fib.forest  fib.tree  let.tree  linear.tree  list.tree  maybe.tree  rainbow.tree  result.tree  spring.tree  string.tree  test.tree
samples/moving_block/: index.html  moving_block.tree
src/: Compiler.hs  Grammar.hs  HaskellSyntax.hs  Internal.hs  JavaScriptSyntax.hs  Language.hs  Lib.hs  MemoryManagement.hs  TypeChecker.hs  WASM.hs  Wasm.hs
test/: Arbitrary.hs  HaskellSyntaxSpec.hs  InternalSpec.hs  JavaScriptSyntaxSpec.hs  SampleSpec.hs  Spec.hs  TypeCheckerSpec.hs  WasmSpec.hs  integration.rb
test/fixtures/: case-deconstruction.tree  case-statement-and-more.tree  case-statement.tree  deconstruction.tree  let.tree  multiple-assignments.tree  nested-assignment.tree
test/fixtures/js/: arguments.tree  call-with-arguments.tree  case.tree  parens.tree  simple.tree  string.tree
test/samples/invalid/: incomplete_definition.tree  mistyped_argument_deconstruction.tree
test/samples/valid/: argument_deconstruction.tree  float.tree  nested_deconstruction.tree  result.tree  simple_int_defintion.tree  simple_string_definition.tree
