name:                forest-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/forest-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Johnstone
maintainer:          ncwjohnstone@gmail.com
copyright:           2017 Nick Johnstone
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
  default-language:    Haskell2010

executable forest-compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , forest-compiler
                     , QuickCheck
  default-language:    Haskell2010

test-suite forest-compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , forest-compiler
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/forest-compiler
