name:                forest-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/forest-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Johnstone
maintainer:          ncwjohnstone@gmail.com
copyright:           2017 Nick Johnstone
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:       -Werror -Wunused-matches -Wunused-local-binds -Wmissing-signatures -Wincomplete-patterns -Wincomplete-uni-patterns -Wincomplete-record-updates
  hs-source-dirs:      src
  exposed-modules:     HaskellSyntax
                     , Wasm
                     , Compiler
                     , Language
                     , TypeChecker
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , generic-deriving
                     , text
                     , raw-strings-qq
                     , safe
                     , containers
  default-language:    Haskell2010

executable forest
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror -Wunused-matches -Wunused-local-binds -Wmissing-signatures -Wincomplete-patterns -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:       base
                     , forest-compiler
                     , megaparsec
                     , safe
                     , text
  default-language:    Haskell2010

test-suite forest-compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HaskellSyntaxSpec
                     , TypeCheckerSpec
                     , WasmSpec
                     , Arbitrary
  build-depends:       base
                     , forest-compiler
                     , QuickCheck
                     , hspec
                     , megaparsec
                     , process
                     , raw-strings-qq
                     , temporary
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror -Wunused-matches -Wunused-local-binds -Wmissing-signatures -Wincomplete-patterns -Wincomplete-uni-patterns -Wincomplete-record-updates
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/forest-compiler
